# dict-tools

./: .gitignore  README.md  pyproject.toml  setup.cfg
batch/: build_package.sh
src/DictTools/: DictTools.py  __init__.py
src/DictTools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/dict_utils/: DictTools.py  dict_utils.py
