[metadata]
name = DictTools
version = 0.0.2
author = Osirius56
author_email = bhrssoftware@gmail.com
description = description
long_description = file: README.md
long_description_content_type = text/markdown
url = url to repository
project_urls =
    Bug Tracker = url to bugTracker
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =

[options.packages.find]
where = src

[aliases]
test=pytest